--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -46,8 +46,8 @@ ul, ol, dl, figure,
  * Images
  */
 img {
-  max-width: 100%;
-  height: auto;
+  max-width: 100%!important;
+  height: auto!important;
   vertical-align: middle;
 }
 
