--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -248,3 +248,14 @@
     }
   }
 }
+
+
+// for legacy wp
+.wp-caption {
+  max-width: 100%!important;
+}
+
+.aligncenter {
+  margin-left: auto;
+  margin-right: auto;
+}
